# gas-estimator

./: .gitignore  Cargo.toml  README.md  foundry.toml
cache/: solidity-files-cache.json
contracts/src/: Caller.sol  Counter.sol  ERC20.sol  MyToken.sol
contracts/test/: Caller.t.sol  Counter.t.sol  ERC20.sol
src/: error.rs  gas_estimator.rs  main.rs  rpc_server.rs  tests.rs  tracer.rs  utils.rs
src/estimators/: evm_based.rs  manual.rs  mod.rs
src/gas_estimator/: call_estimator.rs
