[package]
name = "gas-estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
jsonrpsee = { version = "0.20", features = ["server", "macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
thiserror = "2.0.12"
revm = "25.0.0"
alloy = { version = "1.0.1", features = ["full"] }
